# pinepal

./: .gitignore  Cargo.toml  README.md  io.github.nico359.pinepal.json  meson.build
data/: io.github.nico359.pinepal.desktop.in  io.github.nico359.pinepal.gschema.xml  io.github.nico359.pinepal.metainfo.xml.in  io.github.nico359.pinepal.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  ble_manager.rs  config.rs  dashboard_page.rs  dashboard_page.ui  devices_page.rs  devices_page.ui  log_collector.rs  log_viewer.rs  main.rs  meson.build  notifications.rs  pinepal.gresource.xml  step_chart.rs  step_db.rs  window.rs  window.ui
